  * Bootstrap procedure for the PIT based and the ECP based test were incorrect. 
    First, C starts to count at 0 not 1. This could result in zero entries in the bootstrapped data matrix.
	Second, forget to permute vdirect and vindirect according to the permutation of data.

Version 1.3 (March 26, 2014)

- Maintainer changed from Ulf Schepsmeier to Tobias Erhardt (tobias.erhardt@tum.de)

Version 1.2-1 (March 21, 2014)

- Moved copula from depends to the more appropriate import field
- Added tests generated from example code

Version 1.2-1 (March 4, 2014)

- New functionality:
  * RVineSim allows to commit a (N,d)-matrix of U[0,1] random variates to be transformed to the copula sample. 
    For example if you want to use quasi random variables instead of the pseudo random variables implemented in R (Thanks to Marius Hofert)
  * The package now contains class wrappers that are compatible with the copula class from the copula R-package. These include all bivariate families currently implemented: The class representation for different rotated families of e.g the BB6 family are represented as BB6Copula, r90B6Copula, surBB6Copula and r270BB6Copula. These bivariate classes are fully compatible with the standard copula methods such as dCopula, pCopula, rCopula or fitCopula including persp and contour. A vine copula can as well be coerced into a class representation of vineCopula. However, the support of the standard methods is limited. See the corresponding help pages for details. Earlier introduced R-wrapper of C-functions have been removed, as they are no longer needed by the spcopula R-package
  * added parameter "verbose" to RVineLogLik to allow to suppres some debug output
	
- Bug fix:
  * RVineMLE: the optim argument "parscale" was not correctly defined for all cases.
  * RVineAIC/BIC: Instead of the function arguments "par" and "par2" the calculation was based on RVM$par and RVM$par2. 
    This is corrected now. (reported by Marcel Duellmann; thanks)