@@ -12,6 +12,7 @@ Version 1.3-1 (September 10, 2014)
   * Bootstrap procedure for the PIT based and the ECP based test were incorrect. 
     First, C starts to count at 0 not 1. This could result in zero entries in the bootstrapped data matrix.
 	Second, forget to permute vdirect and vindirect according to the permutation of data.
+  * BiCopSelect: For the rotated BB7 and BB8 (family=37, 38) the limiting cases were incorrect for very small parameters (copy&paste error) (Reported by Radek Solnicky. Thanks!)
 
 Version 1.3 (March 26, 2014)
 
